small content changes for CBL following meeting

--- a/app/views/forms/housing/CBL5yearsadd-joint.html
+++ b/app/views/forms/housing/CBL5yearsadd-joint.html
@@ -87,7 +87,7 @@
             classes: 'govuk-!-font-size-24'
           },
           hint: {
-            text: "Can be estimated dates"
+            text: "If you don’t know give an estimated date. "
           },
           id: "in1-joint",
           name: "in1-joint",
@@ -100,6 +100,9 @@
           label: {
             text: "Date moved out",
             classes: 'govuk-!-font-size-24'
+          },
+          hint: {
+            text: "If you don’t know give an estimated date. "
           },
           id: "out1-joint",
           name: "out1-joint",
