--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -87,7 +87,7 @@
             classes: 'govuk-!-font-size-24'
           },
           hint: {
-            text: "Can be estimated dates"
+            text: "If you don’t know give an estimated date. "
           },
           id: "in1",
           name: "in1",
@@ -100,6 +100,9 @@
           label: {
             text: "Date moved out",
             classes: 'govuk-!-font-size-24'
+          },
+          hint: {
+            text: "If you don’t know give an estimated date. "
           },
           id: "out1",
           name: "out1",
@@ -191,7 +194,7 @@
 
 
 <div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:<span class="UR-tag amber">should be ok to code</span></h3>
+    <h3 class="govuk-heading-s">Design notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>need 5 addresses and <a href="/forms/housing/CBLaddress2">textbox on the last one if the applicant need to add more addresses</a> I only coded 2</li>
     </ul>
