--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -65,7 +65,7 @@
           text: "Email (optional)"
         },
         hint: {
-          text: "We’ll use this to send you a confirmation."
+          text: "We’ll use this to send you confirmation."
         },
         id: "email",
         name: "email",
@@ -86,7 +86,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>to check with Housing if title is really needed to send letters</li>
+      <li>title is needed to send letters - internal backend system makes this field mandatory</li>
     </ul>
 </div>
 <div class="IT-notes-box">
