--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -195,7 +195,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag red">not needed to provide the service - might be removed or changed</span></h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li> Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
     <li>Select at least one</li>
