--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -104,7 +104,7 @@
         id: "more-detail",
         classes: "govuk-!-width-two-thirds",
         label: {
-          text: "Tell us anything else you want us to know about sleeping arrangements. (optional)",
+          text: "Tell us anything else you want us to know about sleeping arrangements (optional)",
           classes:"govuk-!-font-size-24"
         }
       }) }}
