--- a/app/views/forms/housing/CBLwho-moving.html
+++ b/app/views/forms/housing/CBLwho-moving.html
@@ -42,7 +42,7 @@
           name: "who-not-moving",
           fieldset: {
             legend: {
-              text: "Are you currently living with people who won't be moving with you?",
+              text: "Do you live with people who won’t be moving with you?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
