--- a/app/views/forms/housing/CBLaddress2-loop-joint.html
+++ b/app/views/forms/housing/CBLaddress2-loop-joint.html
@@ -117,7 +117,7 @@
             classes: 'govuk-!-font-size-24'
           },
           hint: {
-            text: "Can be estimated dates"
+            text: "If you don’t know give an estimated date. "
           },
           id: "in2-joint",
           name: "in2-joint",
@@ -130,6 +130,9 @@
           label: {
             text: "Date moved out",
             classes: 'govuk-!-font-size-24'
+          },
+          hint: {
+            text: "If you don’t know give an estimated date. "
           },
           id: "out2-joint",
           name: "out2-joint",
