--- a/app/views/forms/housing/CBLconnection-ER.html
+++ b/app/views/forms/housing/CBLconnection-ER.html
@@ -33,7 +33,7 @@
   name: "connection-details",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Tell us the name of this relative and their address including postcode"
+    text: "Tell us the name of this person, their relationship to you and their address including postcode"
   }
 }) }}
 {% endset -%}
@@ -82,7 +82,7 @@
     },
     {
       value: "Relative",
-      text: "Family lives in area",
+      text: "Relative lives in area",
       conditional: {
         html: addressHtml
       }
@@ -113,8 +113,8 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>if they select "family lives in area" , or "Support to or from a resident" we need a textbox for them to enter the name and address</li>
-      <li></li>
+      <li>if they select "Relative lives in area" , or "Support to or from a resident" we need a textbox for them to enter the name and address</li>
+  
     </ul>
 </div>
 <div class="IT-notes-box">
@@ -124,7 +124,7 @@
       <li>extra textbox for other reason, and another for relative live in area / different label for each though </li>
       <li>we need at least one checked, and if open a text box, then it needs not to be empty</li>
       <li>there are two new checkboxes in the list (at the top and one at the bottom) and some content changes on the existing ones</li>
-      <li>validation: <span class="govuk-error-message">Select at least one connection - Give details - Enter name and address</span></li>
+      <li>validation: <span class="govuk-error-message">Select at least one connection - Give details - Enter name, relationship to you and address</span></li>
     </ul>
 </div>
 {% endblock %}
