changes to equality follwing feedback from Joanne

--- a/app/views/forms/equal-opportunities/age.html
+++ b/app/views/forms/equal-opportunities/age.html
@@ -53,7 +53,7 @@ Age - Equality and diversity
               text: "60 or over"
             },
             {
-              value: "no",
+              value: "no say",
               text: "Prefer not to say"
             }
           ]
