--- a/app/views/forms/equal-opportunities/disability.html
+++ b/app/views/forms/equal-opportunities/disability.html
@@ -54,6 +54,10 @@ Disability - Equality and diversity
             {
               value: "no",
               text: "No"
+            },
+            {
+              value: "no say",
+              text: "Prefer not to say"
             }
           ]
         }) }}
