--- a/app/views/forms/equal-opportunities/ethnic-origin.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin.html
@@ -96,8 +96,8 @@ Ethnic origin - Equality and diversity
                 text: "Welsh"
                 },
                 {
-                value: "Gypsy or Traveler",
-                text: "Gypsy or Traveler"
+                value: "Traveler",
+                text: "Traveler"
                 },
                 {
                 value: "Polish",
@@ -122,10 +122,6 @@ Ethnic origin - Equality and diversity
                 {
                 value: "african",
                 text: "African"
-                },
-                {
-                value: "black",
-                text: "Black"
                 },
                 {
                 value: "caribbean",
@@ -179,7 +175,7 @@ Ethnic origin - Equality and diversity
         name: "ethnic",
         fieldset: {
             legend: {
-            text: "How do you describe yourself?",
+            text: "How do you describe your ethic origin?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
             }
@@ -248,6 +244,7 @@ Ethnic origin - Equality and diversity
     <ul class="govuk-list govuk-list--bullet">
         <li><strong>This screen will be  hard to read without Javascript enabled! - we probably need a warning</strong></li>
         <li>original version was longer with more sub categories - <a href="/forms/equal-opportunities/ethnic-origin1">see here</a></li>
+        <li>I've removed gypsy, where it was "Gypsy or Traveler" as I had some feedback that it wasn't appropriate</li>
     </ul>
 </div>
 <div class="IT-notes-box">
