--- a/app/views/forms/equal-opportunities/status.html
+++ b/app/views/forms/equal-opportunities/status.html
@@ -71,7 +71,7 @@ Relationship status - Equality and diversity
               }
             },
             {
-              value: "no",
+              value: "no say",
               text: "Prefer not to say"
             }
           ]
