changes to CBL following feedback from Joanne

--- a/app/views/forms/housing/CBLdob.html
+++ b/app/views/forms/housing/CBLdob.html
@@ -13,7 +13,7 @@
             Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <form class="form" method="post">
+        <form class="form" method="post" novalidate>
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukDateInput({
