--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">should be ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">should be ok to code but content of guidance will change slightly</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Validation - <span class="govuk-error-message">Confirm if have child sometime</span></li>
       <li>if they say yes, then enter children one by one - with screen that ask if more to add yes / no </li>
