--- a/app/views/forms/housing/CBLcontact1.html
+++ b/app/views/forms/housing/CBLcontact1.html
@@ -65,6 +65,11 @@
               checked: checked ("how-contacted", "Phone")
             },
             {
+              value: "Phone but only by text",
+              text: "Phone but only by text",
+              checked: checked ("how-contacted", "Phone but only by text")
+            },
+            {
               value: "Post at my current address",
               text: "Post at my current address",
               checked: checked ("how-contacted", "Post current")
@@ -107,6 +112,11 @@
               value: "Phone",
               text: "Phone",
               checked: checked ("how-contacted", "Phone")
+            },
+            {
+              value: "Phone but only by text",
+              text: "Phone but only by text",
+              checked: checked ("how-contacted", "Phone but only by text")
             },
             {
               value: "Post at my current address",
