--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -66,9 +66,9 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag red">text will change but checkbox and structure ok</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>Screen moved at the start to avoid loosing too much progress if they click on the link to view the GDPR</strong> - But CONTENT WILL CHANGED</li>
+        <li><strong>Screen moved at the start to avoid losing too much progress if they click on the link to view the GDPR</strong></li>
     </ul>
 </div>
     
