add notes from the samaritans website

--- a/app/views/forms/equal-opportunities/ethnic-origin.html
+++ b/app/views/forms/equal-opportunities/ethnic-origin.html
@@ -68,7 +68,7 @@ Ethnic origin - Equality and diversity
         value: data['other-ethnic'],
         classes: "govuk-!-width-two-thirds",
         label: {
-            text: "Describe Other"
+            text: "Describe Other ethnic group"
         }
         }) }}
         {% endset -%}
@@ -175,7 +175,7 @@ Ethnic origin - Equality and diversity
         name: "ethnic",
         fieldset: {
             legend: {
-            text: "How do you describe your ethic origin?",
+            text: "How do you describe your ethic group?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
             }
