--- a/app/views/forms/equal-opportunities/start1.html
+++ b/app/views/forms/equal-opportunities/start1.html
@@ -40,10 +40,14 @@ Equality and diversity
     <li>This is based on a document provided by Maureen from Housing - but simplified</li>
     <li>Ideally, we would want a questionnaire for the whole council</li>
     <li>see the longer original <a href="/forms/equal-opportunities/start">start page</a></li>
+    <li>see an example on the  <a href="https://volunteer.samaritans.org/volunteer/other-support/birmingham/enquire-non-pilot" target="_blank">Samaritans Website</a></li>
+    <li><strong style="background-color:#ffbf47">who is using this data? what do they do with it? do we need so much details?</strong></li>
     </ul>
 </div>
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <p><strong>not checked by Sharon yet</strong></p>
+    <p>example from the Samaritans: <br>
+        We are committed to increasing diversity among our volunteers. If you'd like to tell us about your background and identity then we'll use this information to track how we're doing. This is entirely optional and has no effect on your application.</p>
 </div>
 {% endblock %}
